k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ziot
  annotations:
    cert-manager.io/cluster-issuer: vault-fleet-issuer
    ingress.vke.volcengine.com/apig-instance-name: apig-dwrfhpnpp2q6
    ingress.vke.volcengine.com/loadbalancer-healthcheck-enabled: "true"
    ingress.vke.volcengine.com/loadbalancer-healthcheck-httpcode: http_2xx,http_3xx
    ingress.vke.volcengine.com/loadbalancer-healthcheck-interval: "2"
    ingress.vke.volcengine.com/loadbalancer-healthcheck-method: GET
    ingress.vke.volcengine.com/loadbalancer-healthcheck-path: /actuator/health
    ingress.vke.volcengine.com/loadbalancer-healthcheck-protocol: http
    ingress.vke.volcengine.com/loadbalancer-healthcheck-timeout: "2"
    ingress.vke.volcengine.com/loadbalancer-healthy-threshold: "3"
    ingress.vke.volcengine.com/loadbalancer-id: gd8gntdv2e21p618kbgvg
    ingress.vke.volcengine.com/loadbalancer-pass-through: "false"
    ingress.vke.volcengine.com/loadbalancer-port: "443"
    ingress.vke.volcengine.com/loadbalancer-protocol: https
    ingress.vke.volcengine.com/loadbalancer-scheduler: round_robin
    ingress.vke.volcengine.com/loadbalancer-unhealthy-threshold: "3"
spec:
  ingressClassName: apig
  rules:
    - host: ziot.intra.zeron.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ziot
                port:
                  number: 8848
